Fix issue with forkme and search box overlapping

--- a/assets/style.css
+++ b/assets/style.css
@@ -118,3 +118,8 @@ pre.prettyprint {
 }
 
 .alert-danger h4 { line-height: 1.5; }
+
+#search { margin-right:100px; }
+@media (max-width:991px) {
+  #search { margin-right:10px; }
+}
